syntax = "proto3";

import "google/protobuf/timestamp.proto";

package proto;

service ScriptExecutionService {
  rpc createScriptExecution(ScriptExecutionCreationRequest) returns (ScriptExecutionCreationResponse);
  rpc stopScriptExecution(ScriptExecutionStopRequest) returns (ScriptExecutionStopResponse);
}

message ScriptExecutionCreationRequest {
  string scriptChecksum = 1;
  google.protobuf.Timestamp startDate = 2;
  repeated string tags = 3;
  int32 executionOrderIndex = 4;
  string batchExecutionId = 5;
}

message ScriptExecutionCreationResponse {
  string scriptExecutionId = 1;
}

message ScriptExecutionStopRequest {
  google.protobuf.Timestamp endDate = 1;
  string output = 2;
  ExecutionStatus status = 3;
  string executionId = 4;

  enum ExecutionStatus {
    OK = 0;
    KO = 1;
  }
}

message ScriptExecutionStopResponse {

}